--- a/BraviBraian.MVC/Views/Home/Index.cshtml
+++ b/BraviBraian.MVC/Views/Home/Index.cshtml
@@ -3,29 +3,27 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Bravi Test</h1>
+    <p class="lead">Hello, My name is Braian Pavanelli and this is my development test for Bravi</p>
+    <p><a href="@Url.Action("Index","Resume", null)" class="btn btn-primary btn-lg">See my resume &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Validate</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            This section uses a javascript to validate a string of Brackets
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Index","Validate", null)">Let's try it &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>People</h2>
+        <p>Here you have access to our contact agenda. This section get all data from a WEB API.</p>
+        <p><a class="btn btn-default" href="@Url.Action("Index","People", null)">See more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>About</h2>
+        <p>This project was developed using DDD, Entity Framework, AutoMapper, SimpleInjector, BootStrap, jQuery, etc</p>
+        <p><a class="btn btn-default" href="https://github.com/braianpavanelli/BraviTest">Check My GitHub &raquo;</a></p>
     </div>
 </div>
